# createrepo_c

./: .distributions  .gitignore  .packit.yaml  .pre-commit-config.yaml  AUTHORS  CMakeLists.txt  COPYING  Doxyfile  Doxyfile.in  MANIFEST.in  Makefile  README  README.md  VERSION.cmake  compression_wrapper.c  compression_wrapper.h  constants.h  createrepo_c.bash  createrepo_c.bash.in  createrepo_c.c  createrepo_c.spec  doit.sh  index.html  load_metadata.c  load_metadata.h  load_metadata_2.c  logging.h  main.c  misc.c  misc.h  package.c  package.h  package.i  params.json  parsehdr.c  parsehdr.h  parsehdr.i  parsepkg.c  parsepkg.h  parsepkg.i  (+13 more)
deltarepo/: CMakeLists.txt  README.md  deltarepo.py  managedeltarepos.py  repocontenthash.py  repoupdater.py
deltarepo/acceptance_tests/: TODO.md  test.sh
deltarepo/acceptance_tests/repos/: note  regenrepos.sh
deltarepo/acceptance_tests/repos/repo1/: Cython-0.17.1-2.el7.src.rpm  gen.sh  pkglist  (+1 more)
deltarepo/deltarepo/: __init__.py  applicator.py  common.py  delta_plugins.py  deltametadata.py  deltarepos.py  errors.py  generator.py  plugins.py  plugins_common.py  updater_common.py  util.py  xmlcommon.py
deltarepo/example/: test.sh
deltarepo/example/deltarepos/: deltarepos.xml.xz  gen.sh
deltarepo/example/repos/: packages  pkgs_per_repo  regenrepos.sh
deltarepo/tests/: fixtures.py  run_nosetests.sh.in  test_deltametadata.py  test_deltarepos.py  test_updater_common.py
doc/: CMakeLists.txt  Doxyfile.in.in  createrepo_c.8  createrepo_c.8.in  logo.xcf  mergerepo_c.8  modifyrepo_c.8  sqliterepo_c.8
doc/python/: CMakeLists.txt  conf.py  index.rst  lib.rst
src/: CMakeLists.txt  checksum.c  checksum.h  cleanup.h  cmd_parser.c  cmd_parser.h  compression_wrapper.c  compression_wrapper.h  constants.h  createrepo_c.c  createrepo_c.h  createrepo_c.pc.cmake  createrepo_shared.c  createrepo_shared.h  deltarpms.c  deltarpms.h  deltarpms.h.in  dumper_thread.c  dumper_thread.h  error.c  error.h  glnx-backport-autocleanups.h  glnx-backport-autoptr.h  glnx-backports.c  glnx-backports.h  helpers.c  helpers.h  koji.c  koji.h  load_metadata.c  load_metadata.h  load_metadata.i  load_metadata_2.c  load_metadata_2.h  locate_metadata.c  locate_metadata.h  logging.h  mergerepo_c.c  mergerepo_c.h  metadata_internal.h  (+47 more)
src/python/: CMakeLists.txt  __init__.py  checksum-py.c  checksum-py.h  compression_wrapper-py.c  compression_wrapper-py.h  contentstat-py.c  contentstat-py.h  createrepo_cmodule.c  exception-py.c  exception-py.h  load_metadata-py.c  load_metadata-py.h  locate_metadata-py.c  locate_metadata-py.h  metadata_hashtable.c  metadata_hashtable.h  misc-py.c  misc-py.h  package-py.c  package-py.h  parsepkg-py.c  parsepkg-py.h  repomd-py.c  repomd-py.h  repomdrecord-py.c  repomdrecord-py.h  sqlite-py.c  sqlite-py.h  typeconversion.c  typeconversion.h  updatecollection-py.c  updatecollection-py.h  updatecollectionmodule-py.c  updatecollectionmodule-py.h  updatecollectionpackage-py.c  updatecollectionpackage-py.h  updateinfo-py.c  updateinfo-py.h  updaterecord-py.c  (+9 more)
src/python/createrepo_c/: __init__.py
tests/: CMakeLists.txt  fixtures.h  run_gtester.sh.in  run_tests.sh.in  test_checksum.c  test_compression_wrapper.c  test_koji.c  test_load_metadata.c  test_locate_metadata.c  test_misc.c  test_modifyrepo_shared.c  test_parsepkg.c  test_sqlite.c  test_xml_dump.c  test_xml_dump_primary.c  test_xml_file.c  test_xml_parser_filelists.c  test_xml_parser_main_metadata_together.c  test_xml_parser_repomd.c  test_xml_parser_updateinfo.c  testcompression_wrapper.c  testload_metadata.c  testmisc.c  testsqlite.c
tests/python/: CMakeLists.txt
tests/python/tests/: CMakeLists.txt  fixtures.py  run_nosetests.sh.in  run_unittests.sh.in  test_checksum.py  test_compression_wrapper.py  test_contentstat.py  test_crfile.py  test_load_metadata.py  test_locate_metadata.py  test_misc.py  test_package.py  test_parsepkg.py  test_repomd.py  test_repomdrecord.py  test_repository.py  test_sqlite.py  test_updatecollection.py  test_updatecollectionmodule.py  test_updatecollectionpackage.py  test_updateinfo.py  test_updaterecord.py  test_updatereference.py  test_version.py  test_xml_file.py  test_xml_parser.py
tests/test_data/compressed_files/: 01_plain.foo0  01_plain.txt.xz
tests/test_data/specs/: fake-balicek-iso88591.spec  fake-bash.spec  fake-empty.spec  fake-iso-8859-2.spec  fake-kernel.spec  fake-utf-8.spec
tests/test_data/test_files/: text_file
tests/testdata/compressed_files/: 00_plain.foo1  00_plain.txt.zck  01_plain.foo2  01_plain.foo4  01_plain.foo5  01_plain.txt.zck
tests/testdata/comps_files/: comps_00.xml
tests/testdata/modified_repo_files/: bad_file_type-filelists.xml  error_00-filelists.xml  error_00-other.xml  error_00-primary.xml  long_primary.xml  missing_type-repomd.xml  multiple_warnings_00-filelists.xml  multiple_warnings_00-other.xml  multiple_warnings_00-primary.xml  no_pkgid-filelists.xml  no_pkgid-other.xml  repo_01_ampersand-filelists.xml  repo_01_ampersand-other.xml  repo_01_ampersand-primary.xml  repo_02_different_order_filelists.xml  unknown_element_00-filelists.xml  unknown_element_00-other.xml  unknown_element_00-primary.xml  unknown_element_01-filelists.xml  unknown_element_01-other.xml  unknown_element_01-primary.xml  unknown_element_02-filelists.xml  unknown_element_02-other.xml  unknown_element_02-primary.xml  updateinfo_ampersand.xml
tests/testdata/other_metadata/: 0402e012013246e7e2f2f638c8a6046efdfd71ae1cbeff9c391d9c1ae5d7d431-comps-f19.xml.bz2  c941e2c77a27cdca324c0e0bc3190e134fddddb36a03fb5517e55d156b955205-comps-f19.xml.xz  comps-f19.xml
tests/testdata/repodata_snippets/: filelists_ext_snippet_01.xml  filelists_ext_snippet_02.xml  filelists_snippet_01.xml  filelists_snippet_02.xml  other_snippet_01.xml  other_snippet_02.xml  primary_snippet_01.xml  primary_snippet_02.xml
tests/testdata/specs/: build.sh  fake-Archer.spec  fake-Rimmer.spec
tests/testdata/test_files/: binary_file  sqlite_file.sqlite  text_file.xz
tests/testdata/updateinfo_files/: updateinfo_00.xml  updateinfo_01.xml  updateinfo_02.xml.xz  updateinfo_03.xml
(+348 files in other folders)
