[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "createrepo_c"
description = "C implementation of createrepo"
readme = "README.md"
license = "GPL-2.0-or-later"
version = "1.2.3"
authors = [
    {name = "RPM Software Management", email = "rpm-ecosystem@lists.rpm.org"},
]
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/rpm-software-management/createrepo_c"

[project.scripts]
createrepo_c = "createrepo_c:createrepo_c"
mergerepo_c = "createrepo_c:mergerepo_c"
modifyrepo_c = "createrepo_c:modifyrepo_c"
sqliterepo_c = "createrepo_c:sqliterepo_c"

[tool.scikit-build]
cmake.args = [
    "-DBIN_INSTALL_DIR:PATH=createrepo_c/data/bin",
    "-DBUILD_DOC_C=OFF",
    "-DBUILD_LIBCREATEREPO_C_SHARED:BOOL=OFF",
    "-DCREATEREPO_C_INSTALL_DEVELOPMENT:BOOL=OFF",
    "-DCREATEREPO_C_INSTALL_MANPAGES:BOOL=OFF",
    "-DENABLE_BASHCOMP:BOOL=OFF",
    "-DENABLE_DRPM:BOOL=OFF",
    "-DWITH_ZCHUNK:BOOL=OFF",
]

